--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,205 +10,216 @@
 
 <body>
   <header class="page-header">
-    <div class="page-header__container">
-      <a class="page-header__logo" href="index.html">
-        <img class="page-header__logo-img" src="img/logo-mobile.svg" width="190" height="37" alt="Логотип Cat Energy">
-      </a>
-      <button class="page-header__btn " type="button">Открыть меню</button>
-      <nav class="page-header__nav">
-        <ul class="page-header__main-menu main-menu">
-          <li class="main-menu__item">
-            <a class="main-menu__link" href="index.html">Главная</a>
-          </li>
-          <li class="main-menu__item main-menu__item--active">
-            <a class="main-menu__link">Каталог продукции</a>
-          </li>
-          <li class="main-menu__item">
-            <a class="main-menu__link" href="form.html">Подбор программы</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
+    <a class="page-header__logo" href="index.html">
+      <picture>
+        <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+        <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+        <img class="page-header__logo-img" src="img/logo-mobile.svg" alt="Логотип Cat Energy">
+      </picture>
+    </a>
+    <button class="page-header__toggle toggle--nojs" type="button">
+      <span>Открыть меню</span>
+    </button>
+    <nav class="main-nav main-nav--nojs">
+      <ul class="main-nav__list">
+        <li class="main-nav__item">
+          <a class="main-nav__link" href="index.html">Главная</a>
+        </li>
+        <li class="main-nav_item">
+          <a class="main-nav__link main-nav__link--active">Каталог продукции</a>
+        </li>
+        <li class="main-nav_item">
+          <a class="main-nav__link" href="form.html">Подбор программы</a>
+        </li>
+      </ul>
+    </nav>
   </header>
-  <main>
-    <h1 class="visually-hidden">Cat Energy</h1>
-    <section class="catalog">
-      <div class="catalog__container">
-        <h2 class="catalog__title">Каталог продукции</h2>
-        <ul class="catalog__list">
-          <li class="catalog__item">
-            <div class="product">
-              <img clss="product__img" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
-              <div class="product__description">
-                <h3 class="product__title">Cat Energy PRO 500 г</h3>
-                <table class="product__info">
-                  <tr>
-                    <td>Объем</td>
-                    <td>500 г</td>
-                  </tr>
-                  <tr>
-                    <td>Вкус</td>
-                    <td>Курица</td>
-                  </tr>
-                  <tr>
-                    <td>Цена</td>
-                    <td>700 Р.</td>
-                  </tr>
-                </table>
-              </div>
-            </div>
-            <a class="product__btn button" href="#">Заказать</a>
-          </li>
-          <li class="catalog__item">
-            <div class="product">
-              <img clss="product__img" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г">
-              <div class="product__description">
-                <h3 class="product__title">Cat Energy PRO 1000</h3>
-                <table class="product__info">
-                  <tr>
-                    <td>Объем</td>
-                    <td>1000 г</td>
-                  </tr>
-                  <tr>
-                    <td>Вкус</td>
-                    <td>Курица</td>
-                  </tr>
-                  <tr>
-                    <td>Цена</td>
-                    <td>1000 Р.</td>
-                  </tr>
-                </table>
-              </div>
-            </div>
-            <a class="product__btn button" href="#">Заказать</a>
-          </li>
-          <li class="catalog__item">
-            <div class="product">
-              <img clss="product__img" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
-              <div class="product__description">
-                <h3 class="product__title">Cat Energy PRO 500 г</h3>
-                <table class="product__info">
-                  <tr>
-                    <td>Объем</td>
-                    <td>500 г</td>
-                  </tr>
-                  <tr>
-                    <td>Вкус</td>
-                    <td>Рыба</td>
-                  </tr>
-                  <tr>
-                    <td>Цена</td>
-                    <td>700 Р.</td>
-                  </tr>
-                </table>
-              </div>
-            </div>
-            <a class="product__btn button" href="#">Заказать</a>
-          </li>
-          <li class="catalog__item">
-            <div class="product">
-              <img clss="product__img" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г">
-              <div class="product__description">
-                <h3 class="product__title">Cat Energy PRO 1000 г</h3>
-                <table class="product__info">
-                  <tr>
-                    <td>Объем</td>
-                    <td>1000 г</td>
-                  </tr>
-                  <tr>
-                    <td>Вкус</td>
-                    <td>Рыба</td>
-                  </tr>
-                  <tr>
-                    <td>Цена</td>
-                    <td>1000 Р.</td>
-                  </tr>
-                </table>
-              </div>
-            </div>
-            <a class="product__btn button" href="#">Заказать</a>
-          </li>
-          <li class="catalog__item">
-            <div class="product">
-              <img clss="product__img" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 500 г">
-              <div class="product__description">
-                <h3 class="product__title">Cat Energy Slim 500 г</h3>
-                <table class="product__info">
-                  <tr>
-                    <td>Объем</td>
-                    <td>500 г</td>
-                  </tr>
-                  <tr>
-                    <td>Вкус</td>
-                    <td>Гречка</td>
-                  </tr>
-                  <tr>
-                    <td>Цена</td>
-                    <td>400 Р.</td>
-                  </tr>
-                </table>
-              </div>
-            </div>
-            <a class="product__btn button" href="#">Заказать</a>
-          </li>
-          <li class="catalog__item">
-            <div class="product">
-              <img clss="product__img" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 1000 г">
-              <div class="product__description">
-                <h3 class="product__title">Cat Energy Slim 1000 г</h3>
-                <table class="product__info">
-                  <tr>
-                    <td>Объем</td>
-                    <td>500 г</td>
-                  </tr>
-                  <tr>
-                    <td>Вкус</td>
-                    <td>Гречка</td>
-                  </tr>
-                  <tr>
-                    <td>Цена</td>
-                    <td>700 Р.</td>
-                  </tr>
-                </table>
-              </div>
-            </div>
-            <a class="product__btn button" href="#">Заказать</a>
-          </li>
-          <li class="catalog__item">
-            <div class="product">
-              <img clss="product__img" src="img/rice-small-mobile@1x.jpg" width=140 height="144" alt="Cat Energy Slim 500 г">
-              <div class="product__description">
-                <h3 class="product__title">Cat Energy Slim 500 г</h3>
-                <table class="product__info">
-                  <tr>
-                    <td>Объем</td>
-                    <td>500 г</td>
-                  </tr>
-                  <tr>
-                    <td>Вкус</td>
-                    <td>Рис</td>
-                  </tr>
-                  <tr>
-                    <td>Цена</td>
-                    <td>500 Р.</td>
-                  </tr>
-                </table>
-              </div>
-            </div>
-            <a class="product__btn button" href="#">Заказать</a>
-          </li>
-          <li class="catalog__item catalog__item-more">
-            <div class="more__info">
-              <a class="more__link-icon" href="#"></a>
-              <a class="more__link-title" href="#">
-                <h3 class="more__title">Показать еще 100500 товаров</h3>
-              </a>
-              <p class="more__text">На самом деле вкусов гораздо больше!</p>
-            </div>
-            <a class="more__btn button" href="#">Показать все</a>
-          </li>
-        </ul>
-      </div>
+  <main class="page-main">
+    <section class="catalog catalog__container">
+      <h1 class="catalog__header">Каталог продукции</h1>
+      <ul class="catalog__list products">
+        <li class="products__item product">
+          <a class="product__img-link" href="#">
+            <img class="product__img" src="img/chicken-small-mobile@1x.jpg" alt="Cat energy pro 500г">
+          </a>
+          <div class="product__info">
+            <h3 class="product__title">
+              <a class="product__link" href="#">Cat energy pro 500 г</a>
+            </h3>
+            <table class="product__description description-table">
+              <tr class="description-table__row">
+                <td class="description-table__cell">Объем</td>
+                <td class="description-table__cell">500 г</td>
+              </tr>
+              <tr class="description-table__row">
+                <td class="description-table__cell">Вкус</td>
+                <td class="description-table__cell">Курица</td>
+              </tr>
+              <tr class="description-table__row">
+                <td class="description-table__cell">Цена</td>
+                <td class="description-table__cell">700 Р.</td>
+              </tr>
+            </table>
+          </div>
+          <a class="product__btn button" href="form.html">Заказать</a>
+        </li>
+        <li class="products__item product">
+          <a class="product__img-link" href="#">
+            <img class="product__img" src="img/chicken-big-mobile@1x.jpg" alt="Cat energy pro 1000г">
+          </a>
+          <div class="product__info">
+            <h3 class="product__title">
+              <a class="product__link" href="#">Cat energy pro 1000 г</a>
+            </h3>
+            <table class="product__description description-table">
+              <tr class="description-table__row">
+                <td class="description-table__cell">Объем</td>
+                <td class="description-table__cell">1000 г</td>
+              </tr>
+              <tr class="description-table__row">
+                <td class="description-table__cell">Вкус</td>
+                <td class="description-table__cell">Курица</td>
+              </tr>
+              <tr class="description-table__row">
+                <td class="description-table__cell">Цена</td>
+                <td class="description-table__cell">1000 Р.</td>
+              </tr>
+            </table>
+          </div>
+          <a class="product__btn button" href="form.html">Заказать</a>
+        </li>
+        <li class="products__item product">
+          <a class="product__img-link" href="#">
+            <img class="product__img" src="img/fish-small-mobile@1x.jpg" alt="Cat energy pro 500г">
+          </a>
+          <div class="product__info">
+            <h3 class="product__title">
+              <a class="product__link" href="#">Cat energy pro 500 г</a>
+            </h3>
+            <table class="product__description description-table">
+              <tr class="description-table__row">
+                <td class="description-table__cell">Объем</td>
+                <td class="description-table__cell">500 г</td>
+              </tr>
+              <tr class="description-table__row">
+                <td class="description-table__cell">Вкус</td>
+                <td class="description-table__cell">Рыба</td>
+              </tr>
+              <tr class="description-table__row">
+                <td class="description-table__cell">Цена</td>
+                <td class="description-table__cell">700 Р.</td>
+              </tr>
+            </table>
+          </div>
+          <a class="product__btn button" href="form.html">Заказать</a>
+        </li>
+        <li class="products__item product">
+          <a class="product__img-link" href="href">
+            <img class="product__img" src="img/fish-big-mobile@1x.jpg" alt="Cat energy pro 1000г">
+          </a>
+          <div class="product__info">
+            <h3 class="product__title">
+              <a class="product__link" href="#">Cat energy pro 1000 г</a>
+            </h3>
+            <table class="product__description description-table">
+              <tr class="description-table__row">
+                <td class="description-table__cell">Объем</td>
+                <td class="description-table__cell">1000 г</td>
+              </tr>
+              <tr class="description-table__row">
+                <td class="description-table__cell">Вкус</td>
+                <td class="description-table__cell">Рыба</td>
+              </tr>
+              <tr class="description-table__row">
+                <td class="description-table__cell">Цена</td>
+                <td class="description-table__cell">1000 Р.</td>
+              </tr>
+            </table>
+          </div>
+          <a class="product__btn button" href="form.html">Заказать</a>
+        </li>
+        <li class="products__item product">
+          <a class="product__img-link" href="#">
+            <img class="product__img" src="img/buckwheat-small-mobile@1x.jpg" alt="Cat energy slim 500г">
+          </a>
+          <div class="product__info">
+            <h3 class="product__title">
+              <a class="product__link" href="#">Cat energy slim 500 г</a>
+            </h3>
+            <table class="product__description description-table">
+              <tr class="description-table__row">
+                <td class="description-table__cell">Объем</td>
+                <td class="description-table__cell">500 г</td>
+              </tr>
+              <tr class="description-table__row">
+                <td class="description-table__cell">Вкус</td>
+                <td class="description-table__cell">Гречка</td>
+              </tr>
+              <tr class="description-table__row">
+                <td class="description-table__cell">Цена</td>
+                <td class="description-table__cell">400 Р.</td>
+              </tr>
+            </table>
+          </div>
+          <a class="product__btn button" href="form.html">Заказать</a>
+        </li>
+        <li class="products__item product">
+          <a class="product__img-link" href="#">
+            <img class="product__img" src="img/buckwheat-big-mobile@1x.jpg" alt="Cat energy slim 1000г">
+          </a>
+          <div class="product__info">
+            <h3 class="product__title">
+              <a class="product__link" href="#">Cat energy slim 1000 г</a>
+            </h3>
+            <table class="product__description description-table">
+              <tr class="description-table__row">
+                <td class="description-table__cell">Объем</td>
+                <td class="description-table__cell">1000 г</td>
+              </tr>
+              <tr class="description-table__row">
+                <td class="description-table__cell">Вкус</td>
+                <td class="description-table__cell">Гречка</td>
+              </tr>
+              <tr class="description-table__row">
+                <td class="description-table__cell">Цена</td>
+                <td class="description-table__cell">700 Р.</td>
+              </tr>
+            </table>
+          </div>
+          <a class="product__btn button" href="form.html">Заказать</a>
+        </li>
+        <li class="products__item product">
+          <a class="product__img-link" href="#">
+            <img class="product__img" src="img/rice-small-mobile@1x.jpg" alt="Cat energy slim 500г">
+          </a>
+          <div class="product__info">
+            <h3 class="product__title">
+              <a class="product__link" href="#">Cat energy slim 500 г</a>
+            </h3>
+            <table class="product__description description-table">
+              <tr class="description-table__row">
+                <td class="description-table__cell">Объем</td>
+                <td class="description-table__cell">500 г</td>
+              </tr>
+              <tr class="description-table__row">
+                <td class="description-table__cell">Вкус</td>
+                <td class="description-table__cell">Рис</td>
+              </tr>
+              <tr class="description-table__row">
+                <td class="description-table__cell">Цена</td>
+                <td class="description-table__cell">500 Р.</td>
+              </tr>
+            </table>
+          </div>
+          <a class="product__btn button" href="form.html">Заказать</a>
+        </li>
+        <li class="products__item catalog__plus">
+          <img class="catalog__plus-all-icon" src="img/icon-plus-mobile.svg" width="30" height="30" alt="Показать еще товары">
+          <p class="catalog__plus-more-text">Показать еще 100500 товаров</p>
+          <p class="catalog__plus-text-small">На самом деле вкусов гораздо больше!</p>
+          <a class="button--grey button" href="#">показать все</a>
+        </li>
+      </ul>
     </section>
     <section class="add-product"></section>
     <section class="contacts">
@@ -222,33 +233,36 @@
   </main>
   <footer class="page-footer">
     <div class="page-footer__container">
-      <a class="page-footer__logo" href="index.html">
-        <img class="page-footer__logo-img" src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
+      <a class="page-footer__logo-link">
+        <img class="page-footer__logo-img" src="img/logo-footer.svg" width="129" height="24" alt="Cat Energy">
       </a>
       <div class="page-footer__social social">
-        <h2 class="visually-hidden">Мы в социальных сетях</h2>
         <ul class="social__list">
+          <h2 class="visually-hidden">Мы в социальных сетях</h2>
           <li class="social__item">
             <a class="social__link social__link--vk" href="#">
               <span class="visually-hidden">Вконтакте</span>
+              <img class="social__img" src="img/icon-vk.svg" width="25" height="12">
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--instagram" href="#">
+            <a class="social__link social__link--insta" href="#">
               <span class="visually-hidden">Инстаграм</span>
+              <img class="social__img" src="img/icon-insta.svg" width="25" height="17">
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--fb" href="#">
               <span class="visually-hidden">Фейсбук</span>
+              <img class="social__img" src="img/icon-fb.svg" width="25" height="19">
             </a>
           </li>
         </ul>
       </div>
       <div class="page-footer__copyright copyright">
         <h2 class="visually-hidden">Логотип разработчика сайта</h2>
-        <a class="copyright__link" href="https://htmlacademy.ru" target="_blank">
-          HTML Academy
+        <a class="copyright__link" href="http://htmlacademy.ru">HTML Academy</a>
+        <a class="copyright__link-logo" href="http://htmlacademy.ru" aria-label="Переход на сайт в HTML Academy" target="_blank">
           <img class="copyright__logo" src="img/htmlacademy.svg" alt="Логотип HTMLAcademy" width="27" height="35">
         </a>
       </div>
