--- a/source/form.html
+++ b/source/form.html
@@ -10,22 +10,26 @@
 
 <body>
   <header class="page-header">
-    <nav class="main-nav">
-      <div class="main-nav__wrapper">
-        <a class="main-nav__logo">
-          <img class="main-nav__logo-img" src="img/logo-mobile.svg" width="190" height="37" alt="Логотип Cat Energy">
-        </a>
-        <button class="main-nav__button" type="button">Открыть меню</button>
-      </div>
-      <ul class="main-nav__list main-menu">
-        <li class="main-menu__item">
-          <a class="main-menu__link" href="index.html">Главная</a>
+    <a class="page-header__logo" href="index.html">
+      <picture>
+        <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+        <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+        <img class="page-header__logo-img" src="img/logo-mobile.svg" alt="Логотип Cat Energy">
+      </picture>
+    </a>
+    <button class="page-header__toggle toggle--nojs" type="button">
+      <span>Открыть меню</span>
+    </button>
+    <nav class="main-nav main-nav--nojs">
+      <ul class="main-nav__list">
+        <li class="main-nav__item">
+          <a class="main-nav__link" href="index.html">Главная</a>
         </li>
-        <li class="main-menu__item">
-          <a class="main-menu__link" href="catalog.html">Каталог продукции</a>
+        <li class="main-nav_item">
+          <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
         </li>
-        <li class="main-menu__item main-menu__item--active">
-          <a class="main-menu__link">Подбор программы</a>
+        <li class="main-nav_item">
+          <a class="main-nav__link main-nav__link--active">Подбор программы</a>
         </li>
       </ul>
     </nav>
@@ -34,35 +38,40 @@
     <h1 class="visually-hidden">Cat Energy</h1>
   </main>
   <footer class="page-footer">
-    <a class="page-footer__logo" href="index.html">
-      <img class="page-footer__logo-title" src="http://placehold.it/100x18" width="100" height="18" alt="Cat Energy">
-    </a>
-    <div class="page-footer__social social">
-      <h2 class="visually-hidden">Мы в социальных сетях</h2>
-      <ul class="social__list">
-        <li class="social__item">
-          <a class="social__link social__link--vk" href="#">
-            <span class="visually-hidden">Вконтакте</span>
-          </a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--instagram" href="#">
-            <span class="visually-hidden">Инстаграм</span>
-          </a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--fb" href="#">
-            <span class="visually-hidden">Фейсбук</span>
-          </a>
-        </li>
-      </ul>
-    </div>
-    <div class="page-footer__copyright copyright">
-      <h2 class="visually-hidden">Логотип разработчика сайта</h2>
-      <a class="copyright__link" href="https://htmlacademy.ru" target="_blank">
-        HTML Academy
-        <img class="copyright__logo" src="http://placehold.it/33x37" alt="Логотип HTMLAcademy" width="27" height="34">
+    <div class="page-footer__container">
+      <a class="page-footer__logo-link">
+        <img class="page-footer__logo-img" src="img/logo-footer.svg" width="129" height="24" alt="Cat Energy">
       </a>
+      <div class="page-footer__social social">
+        <ul class="social__list">
+          <h2 class="visually-hidden">Мы в социальных сетях</h2>
+          <li class="social__item">
+            <a class="social__link social__link--vk" href="#">
+              <span class="visually-hidden">Вконтакте</span>
+              <img class="social__img" src="img/icon-vk.svg" width="25" height="12">
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--insta" href="#">
+              <span class="visually-hidden">Инстаграм</span>
+              <img class="social__img" src="img/icon-insta.svg" width="25" height="17">
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--fb" href="#">
+              <span class="visually-hidden">Фейсбук</span>
+              <img class="social__img" src="img/icon-fb.svg" width="25" height="19">
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="page-footer__copyright copyright">
+        <h2 class="visually-hidden">Логотип разработчика сайта</h2>
+        <a class="copyright__link" href="http://htmlacademy.ru">HTML Academy</a>
+        <a class="copyright__link-logo" href="http://htmlacademy.ru" aria-label="Переход на сайт в HTML Academy" target="_blank">
+          <img class="copyright__logo" src="img/htmlacademy.svg" alt="Логотип HTMLAcademy" width="27" height="35">
+        </a>
+      </div>
     </div>
   </footer>
 </body>
