--- a/source/index.html
+++ b/source/index.html
@@ -10,53 +10,58 @@
 
 <body>
 
-  <header class="page-header">
-    <div class="page-header__container">
-      <a class="page-header__logo">
-        <img class="page-header__logo-img" src="img/logo-mobile.svg" width="190" height="37" alt="Логотип Cat Energy">
-      </a>
-      <button class="page-header__btn " type="button">Открыть меню</button>
-      <nav class="page-header__nav">
-        <ul class="page-header__main-menu main-menu">
-          <li class="main-menu__item main-menu__item--active">
-            <a class="main-menu__link">Главная</a>
-          </li>
-          <li class="main-menu__item">
-            <a class="main-menu__link" href="catalog.html">Каталог продукции</a>
-          </li>
-          <li class="main-menu__item">
-            <a class="main-menu__link" href="form.html">Подбор программы</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
+  <header class="page-header page-header--index">
+    <a class="page-header__logo">
+      <picture>
+        <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+        <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+        <img class="page-header__logo-img" src="img/logo-mobile.svg" alt="Логотип Cat Energy">
+      </picture>
+    </a>
+    <button class="page-header__toggle toggle--nojs" type="button">
+      <span>Открыть меню</span>
+    </button>
+    <nav class="main-nav main-nav--nojs">
+      <ul class="main-nav__list">
+        <li class="main-nav__item">
+          <a class="main-nav__link main-nav__link--index main-nav__link--active">Главная</a>
+        </li>
+        <li class="main-nav_item">
+          <a class="main-nav__link main-nav__link--index" href="catalog.html">Каталог продукции</a>
+        </li>
+        <li class="main-nav_item">
+          <a class="main-nav__link main-nav__link--index" href="form.html">Подбор программы</a>
+        </li>
+      </ul>
+    </nav>
   </header>
   <main class="page-main">
     <h1 class="visually-hidden">Cat Energy</h1>
-    <section class="promo">
-      <div class="promo__container">
+    <section class="promo__container promo">
+      <div class="promo__wrapper">
         <h2 class="promo__title">Функциональное питание для котов</h2>
         <p class="promo__content">Занялся собой? Займись котом</p>
-        <img class="promo__img" src="img/index-can-mobile@1x.png" alt="Продукт Cat Energy" width="280" height="271">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/index-can-desktop@1x.png 1x, img/index-can-desktop@2x.png 2x">
+          <img class="promo__img" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x" alt="Product" width="280" height="271">
+        </picture>
         <a class="promo__btn button" href="form.html">Подобрать программу</a>
       </div>
     </section>
     <section class="programs">
       <h2 class="visually-hidden">Программы для котов</h2>
-      <div class="programs__container">
-        <ul class="programs__list">
-          <li class="programs__item program program--slim">
-            <h3 class="program__title">Похудение</h3>
-            <p class="program__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="program__link" href="catalog.html">Каталог Slim</a>
-          </li>
-          <li class="programs__item program program--pro">
-            <h3 class="program__title">Набор массы</h3>
-            <p class="program__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a class="program__link" href="catalog.html">Каталог Pro</a>
-          </li>
-        </ul>
-      </div>
+      <ul class="programs__list">
+        <li class="programs__item program program--slim">
+          <h3 class="program__title">Похудение</h3>
+          <p class="program__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <a class="program__link" href="catalog.html">Каталог Slim</a>
+        </li>
+        <li class="programs__item program program--pro">
+          <h3 class="program__title">Набор массы</h3>
+          <p class="program__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+          <a class="program__link" href="catalog.html">Каталог Pro</a>
+        </li>
+      </ul>
     </section>
     <section class="advantages">
       <h2 class="visually-hidden">Преимущества функционального питания Cat Energy</h2>
@@ -95,33 +100,36 @@
   </main>
   <footer class="page-footer">
     <div class="page-footer__container">
-      <a class="page-footer__logo">
-        <img class="page-footer__logo-img" src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
+      <a class="page-footer__logo-link">
+        <img class="page-footer__logo-img" src="img/logo-footer.svg" width="129" height="24" alt="Cat Energy">
       </a>
       <div class="page-footer__social social">
-        <h2 class="visually-hidden">Мы в социальных сетях</h2>
         <ul class="social__list">
+          <h2 class="visually-hidden">Мы в социальных сетях</h2>
           <li class="social__item">
             <a class="social__link social__link--vk" href="#">
               <span class="visually-hidden">Вконтакте</span>
+              <img class="social__img" src="img/icon-vk.svg" width="25" height="12">
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--instagram" href="#">
+            <a class="social__link social__link--insta" href="#">
               <span class="visually-hidden">Инстаграм</span>
+              <img class="social__img" src="img/icon-insta.svg" width="25" height="17">
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--fb" href="#">
               <span class="visually-hidden">Фейсбук</span>
+              <img class="social__img" src="img/icon-fb.svg" width="25" height="19">
             </a>
           </li>
         </ul>
       </div>
       <div class="page-footer__copyright copyright">
         <h2 class="visually-hidden">Логотип разработчика сайта</h2>
-        <a class="copyright__link" href="https://htmlacademy.ru" target="_blank">
-          HTML Academy
+        <a class="copyright__link" href="http://htmlacademy.ru">HTML Academy</a>
+        <a class="copyright__link-logo" href="http://htmlacademy.ru" aria-label="Переход на сайт в HTML Academy" target="_blank">
           <img class="copyright__logo" src="img/htmlacademy.svg" alt="Логотип HTMLAcademy" width="27" height="35">
         </a>
       </div>
